# configuration-structure

./: .gitignore  .gitmodules  Makefile  README.md  appendix.tex  charter.adoc  dhall-to.yaml  example.dhall  example.md  example.scala  fast-int.dhall  header.adoc  introduction.adoc  main.tex  manual-dedup-example.dhall  manual-dedup-spec.dhall  mapping-to-asn1.adoc  referenced-standards.adoc  riscv-configuration-structure-draft.adoc  riscv-configuration-structure-draft.tex  riscv-configuration-structure.tex  riscv-unified-discovery-draft.adoc  rvcs.py  schema.adoc  schema.asn  shared.dhall  solution-outline.adoc  spec.dhall  u540.dhall  unified_discovery_schema.asn1  unified_discovery_spec.adoc
.github/workflows/: actions.yml  asn1c.yml  build-pdf.yml  lib.yml  pylint.yml
asn1c/: AbstractCommand.c  AccessMemoryCommand.h  AccessRegisterCommand.h  Clic.h  Configuration.c  Debug.c  Debug.h  DebugModule.h  DebugTriggerMcontrol.c  DebugTriggerMcontrolCompact.h  FastInterruptModule.c  FastInterruptModule.h  Hart.c  Makefile.am.libasncodec  PossibleValues.c  PossibleValues.h  PrivModes.c  PrivSatps.c  PrivSatps.h  Privileged.h  Range.c  TraceModule.c  Triple.c  Triple.h  Tuple.h  build.sh  converter-example.mk
asn1tools/: rvcs.py
binary/: Makefile  compress.py  cstruct.c
binary/asn1/: asn1_value_outputlog  build.sh  decode.py  encode.py  schema.asn  schema.asn.value  schema.asn1
binary/cbor/: Makefile  README.md  instance.cbor.hex  instance.json  parse-cbor.c  spec.cddl  test.sh
binary/custom-encoding/: README.md  c_code.c  c_header.h  encode.sh  example.json5  schema.json5  tool.py
binary/descriptions/: debug_module.yaml  example-compact.yaml  example-normal.yaml  example.jer  example.uper  example.xer  (+1 more)
custom-encoding/: README.md  example.json5  schema.json5  tool.py
examples/: debug_module.jer  debug_module.yaml  example.jer  example.json5  example.toml  example.yaml
figures/: mconfigptr-single-p.vsdx  socket-example.odg  socket-example.vsdx
human-readable/: .gitignore
lib/: README.md  example.c  meson.build  riscv64-linux-elf  riscv64-linux-gnu  rvcs.h
past_work/: Background.md  README.md  requirements.txt
resources/: riscv-fonts  riscv-themes
schema/: configuration-structure.asn  debug-extension.asn  hart-extension.asn  helper-types.asn  std-priv-extensions.asn  std-unpriv-extensions.asn  virtual-memory-extension.asn  zjpm-extension.asn  zk-extensions.asn
src/: charter.adoc  debug.adoc  header.adoc  introduction.adoc  mapping-to-asn1.adoc  mconfigptr.adoc  referenced-standards.adoc  riscv-unified-discovery-draft.adoc  schema.adoc  solution-outline.adoc  virtualization.adoc
tool/: tool.py
(+54 files in other folders)
